--- a/donationcss/desktop.css
+++ b/donationcss/desktop.css
@@ -8,37 +8,36 @@ html {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 0px 0px 0px 0px;
-  top: 0px;
-  left: 0px;
+  padding: 0%;
 }
 .form-image {
   width: auto;
   background-image: url("/assets/assets/donation/annie-spratt-427340-unsplash.png");
   background-repeat: no-repeat;
-  height: 1224px;
+  height: 76rem;
   opacity: 100%;
+  background-size: 100% 100%;
 }
 .form-area {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "div1 div2";
-  height: 1224px;
+  height: 100%;
 }
 .form-caption {
   grid-area: div2;
-  margin: 0px 0px 0px 0px;
-  top: 137px;
-  left: 249px;
-  width: 361px;
-  height: 258px;
+  margin: 0%;
+  top: 10%;
+  left: 40%;
+  width: 53%;
+  height: 26%;
   position: relative;
 }
 .donation-form {
-  top: 144px;
-  left: 90px;
-  width: 577px;
-  height: 980px;
+  top: 10%;
+  left: 23%;
+  width: 95%;
+  height: 82%;
   background: #354463;
   opacity: 100%;
   grid-area: div1;
@@ -48,9 +47,9 @@ html {
   text-align: left;
   font: Bold 25px/39px Helvetica;
   color: #ffffff;
-  width: 425px;
-  height: 43px;
-  top: 53%;
+  width: 68%;
+  height: 44%;
+  top: 54%;
   position: relative;
   left: 8%;
 }
@@ -58,8 +57,8 @@ html {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   grid-template-areas: "pesonal-info-area" "payment-area";
-  width: 577px;
-  height: 969px;
+  width: 100%;
+  height: 62.35rem;
 }
 .personal-info-area {
   display: grid;
@@ -207,8 +206,8 @@ html {
   position: relative;
   height: 2rem;
   top: 1rem;
+  width: 48%;
 }
-
 input {
   -webkit-appearance: none;
 }
