--- a/homecss/style.css
+++ b/homecss/style.css
@@ -57,8 +57,6 @@ a {
   margin: 10px 0px 0px 0px;
 }
 .image {
-  top: 128px;
-  left: 0px;
   width: auto;
   height: 672px;
   background-image: url("/assets/assets/home/annie-spratt-135307-unsplash.png");
@@ -68,23 +66,23 @@ a {
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "div1 div2";
   opacity: 100%;
-  align-items: center;
 }
 
 .intro-card {
   background: white;
   color: #354463;
-  width: 460px;
-  height: 360px;
-  padding: 20px 20px 20px 40px;
-  margin: 150px 0px 0px 159px;
+  position: relative;
+  top: 40%;
+  left: 25%;
   grid-area: div1;
+  width: 74%;
+  height: 80%;
 }
 .intro-h1 {
-  font: Bold 38px/46px Helvetica;
+  font: Bold 36px/46px Helvetica;
   padding: 0 0 0 25px;
-  width: 440px;
-  height: 221px;
+  width: 81%;
+  height: 57%;
 }
 .intro-p {
   text-decoration: underline;
@@ -102,8 +100,12 @@ a {
 }
 .the-issue {
   position: relative;
-  top: 172px;
-  left: 187px;
+  top: 36%;
+  left: 29%;
+  grid-area: div1;
+  z-index: 1;
+  width: 25%;
+  height: 9%;
 }
 .card-title {
   color: white;
@@ -114,7 +116,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0px 0px 0px 40px;
+  margin: 0px 0px 0px 0px;
 }
 .intro-caption {
   font-family: "Flood";
@@ -122,11 +124,16 @@ a {
   font-size: 64px;
   width: 296px;
   height: 224px;
-  margin: 109px 0px 170px 0px;
+  position: relative;
+  top: 39%;
+  left: 19%;
+  grid-area: div2;
 }
 .take-action {
   position: relative;
-  margin: 62px 0px 0px 598px;
+  width: 40%;
+  height: 6%;
+  top: 90%;
 }
 .take-action-card {
   display: grid;
@@ -140,9 +147,9 @@ a {
   color: #354463;
 }
 .action-card {
-  width: 271px;
+  width: 273px;
   height: 94px;
-  padding: 50px 40px 0px 26px;
+  padding: 50px 26px 0px 26px;
   font-size: 16px;
 }
 .action-card1 {
@@ -326,7 +333,7 @@ pre {
 
 .did-know {
   position: absolute;
-  margin: 105px 0px 0px 660px;
+  margin: 8% 0% 0% 52%;
 }
 
 .stories-area {
